--- a/app/src/main/res/layout/fragment_author.xml
+++ b/app/src/main/res/layout/fragment_author.xml
@@ -1,78 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="400dp"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="10dp"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:paddingTop="10dp"
-    tools:context="org.dreamitcodeit.storyteller.AuthorFragment">
+    android:gravity="center"
+    android:padding="10dp"
+    android:weightSum="1">
 
     <TextView
         android:text="Title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="50dp"
+        android:id="@+id/tvTitle"/>
 
     <EditText
         android:id="@+id/etTitle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvTitle"/>
 
 
     <TextView
         android:text="Story Body"
+        android:id="@+id/tvBody"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/etTitle"/>
 
     <EditText
         android:id="@+id/etStoryBody"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvBody"/>
 
     <TextView
         android:text="Latitude"
+        android:id="@+id/tvLat"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/etStoryBody"/>
 
     <EditText
         android:id="@+id/etLatitude"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvLat"/>
 
     <TextView
         android:text="Longitude"
+        android:id="@+id/tvLong"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/etLatitude"/>
 
     <EditText
         android:id="@+id/etLongitude"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvLong"/>
 
     <Button
         android:id="@+id/btSave"
         android:text="Create"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/etLongitude"/>
 
     <Button
         android:id="@+id/btFetch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Fetch Data" />
+        android:text="Fetch Data"
+        android:layout_below="@id/btSave"/>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvStoriesLabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Stories"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_below="@id/btFetch"/>
 
     <TextView
         android:id="@+id/tvStories"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvStoriesLabel"/>
 
-</LinearLayout>
+</RelativeLayout>
