--- a/app/src/main/res/layout/activity_view_story.xml
+++ b/app/src/main/res/layout/activity_view_story.xml
@@ -6,4 +6,22 @@
     android:layout_height="match_parent"
     tools:context="org.dreamitcodeit.storyteller.ViewStoryActivity">
 
+    <TextView
+        android:id="@+id/tvTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="TextView" />
+
+    <TextView
+        android:id="@+id/tvStoryBody"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/tvTitle"
+        android:layout_marginTop="41dp"
+        android:text="TextView" />
 </RelativeLayout>
