--- a/app/src/main/res/layout/activity_view_story.xml
+++ b/app/src/main/res/layout/activity_view_story.xml
@@ -10,18 +10,17 @@
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
+        android:text="TextView"
         android:layout_alignParentTop="true"
-        android:text="TextView" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="17dp" />
 
     <TextView
         android:id="@+id/tvStoryBody"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
+        android:layout_marginTop="28dp"
+        android:text="TextView"
         android:layout_below="@+id/tvTitle"
-        android:layout_marginTop="41dp"
-        android:text="TextView" />
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
