scroll view working for view story activity

--- a/app/src/main/res/layout/activity_author.xml
+++ b/app/src/main/res/layout/activity_author.xml
@@ -35,6 +35,7 @@
         android:id="@+id/etStoryBody"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:maxLines="20"
         android:layout_below="@id/tvBody"/>
 
     <Button
