--- a/app/src/main/res/layout/activity_view_story.xml
+++ b/app/src/main/res/layout/activity_view_story.xml
@@ -21,6 +21,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:text="TextView"
+        android:maxLines="20"
+        android:scrollbars="vertical"
         android:layout_below="@+id/tvTitle"
         android:layout_alignParentStart="true" />
 </RelativeLayout>
