--- a/app/src/main/res/layout/activity_author.xml
+++ b/app/src/main/res/layout/activity_author.xml
@@ -36,6 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="20"
+        android:scrollbars="vertical"
         android:layout_below="@id/tvBody"/>
 
     <Button
