search result looks better

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -7,10 +7,23 @@
     tools:context="org.dreamitcodeit.storyteller.SearchActivity">
 
     <TextView
-        android:id="@+id/tvSearchResults"
-        android:layout_width="match_parent"
+        android:id="@+id/tvTitle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="TextView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="17dp" />
+
+    <TextView
+        android:id="@+id/tvStoryBody"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:text="TextView"
         android:maxLines="40"
         android:scrollbars="vertical"
-        android:text="TextView" />
+        android:layout_below="@+id/tvTitle"
+        android:layout_alignParentStart="true" />
+
 </LinearLayout>
