loading images worksgit add .git add .git add . Code it still ugly.

--- a/app/src/main/res/layout/activity_view_story.xml
+++ b/app/src/main/res/layout/activity_view_story.xml
@@ -25,4 +25,14 @@
         android:scrollbars="vertical"
         android:layout_below="@+id/tvTitle"
         android:layout_alignParentStart="true" />
+
+    <ImageView
+        android:id="@+id/ivImage"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/tvStoryBody"
+        app:srcCompat="@color/colorAccent" />
+
+
 </RelativeLayout>
