--- a/app/src/main/res/layout/activity_author.xml
+++ b/app/src/main/res/layout/activity_author.xml
@@ -75,22 +75,23 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tvStoriesLabel"/>
 
-    <ImageButton
-        android:id="@+id/ibCalendar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/ic_menu_my_calendar"
-        android:layout_below="@+id/tvStories"
-        android:layout_toEndOf="@+id/dpCompose" />
-
     <EditText
         android:id="@+id/dob"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/tvStories"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name" />
+        android:inputType="date"
+        android:layout_below="@+id/tvStories"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/ibCalendar"
+        android:layout_alignBottom="@+id/ibCalendar" />
+
+    <ImageButton
+        android:id="@+id/ibCalendar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/tvStories"
+        app:srcCompat="@drawable/ic_date_range_black_24dp" />
 
 </RelativeLayout>
