--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -17,45 +17,49 @@
             android:id="@+id/ivProfileImage"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@color/colorPrimary"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:padding="12dp"/>
+            android:padding="12dp"
+            android:src="@color/colorPrimary" />
 
         <TextView
             android:id="@+id/tvName"
-            android:layout_toEndOf="@id/ivProfileImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/ivProfileImage"
+            android:paddingTop="12dp"
             android:text="Jane Doe"
-            android:textSize="18sp"
-            android:paddingTop="12dp" />
+            android:textSize="18sp" />
 
         <ImageView
-            android:layout_below="@id/tvName"
-            android:layout_toEndOf="@id/ivProfileImage"
             android:id="@+id/ivLocationIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_location_on_black_24dp"/>
+            android:layout_below="@id/tvName"
+            android:layout_toEndOf="@id/ivProfileImage"
+            android:src="@drawable/ic_location_on_black_24dp" />
 
         <TextView
             android:id="@+id/tvLocation"
-            android:layout_width="50dp"
+            android:layout_width="75dp"
             android:layout_height="wrap_content"
             android:text="Menlo Park, CA"
-            android:layout_below="@id/tvName"
-            android:layout_toEndOf="@id/ivLocationIcon"
-            android:textSize="9sp"/>
+            android:textSize="9sp"
+            android:layout_alignBottom="@+id/ivLocationIcon"
+            android:layout_toEndOf="@+id/ivLocationIcon" />
 
 
         <RatingBar
+            android:id="@+id/ratingBar"
+            style="@style/Widget.AppCompat.RatingBar.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignBottom="@id/ivProfileImage"/>
+            android:layout_alignBottom="@+id/tvLocation"
+            android:layout_marginStart="64dp"
+            android:layout_toEndOf="@+id/tvName" />
 
     </RelativeLayout>
+
     <android.support.design.widget.TabLayout
         android:id="@+id/sliding_tabs"
         android:layout_width="match_parent"
