--- a/app/src/main/res/layout/activity_author.xml
+++ b/app/src/main/res/layout/activity_author.xml
@@ -100,13 +100,14 @@
         android:text="Import Photo" />
 
     <EditText
-        android:id="@+id/dob"
+        android:id="@+id/tvDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="date"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/btImportPhoto" />
 
     <ImageButton
         android:id="@+id/ibCalendar"
@@ -114,7 +115,7 @@
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/ic_date_range_black_24dp"
         android:layout_alignParentBottom="true"
-        android:layout_toStartOf="@+id/dob"
-        android:layout_alignTop="@+id/dob" />
+        android:layout_toStartOf="@+id/tvDate"
+        android:layout_alignTop="@+id/tvDate" />
 
 </RelativeLayout>
