--- a/app/src/main/res/layout/activity_view_story.xml
+++ b/app/src/main/res/layout/activity_view_story.xml
@@ -34,5 +34,13 @@
         android:layout_below="@+id/tvStoryBody"
         app:srcCompat="@color/colorAccent" />
 
+    <RatingBar
+        android:id="@+id/rbRating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/ivImage"
+        android:layout_marginTop="21dp" />
+
 
 </RelativeLayout>
