--- a/app/src/main/res/layout/activity_author.xml
+++ b/app/src/main/res/layout/activity_author.xml
@@ -13,7 +13,11 @@
         android:layout_width="match_parent"
         android:layout_height="0px"
         android:layout_weight="1"
-        android:background="@android:color/white" />
+        android:background="@android:color/white"
+        android:layout_below="@+id/ivPreview"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="41dp"
+        android:layout_marginTop="44dp" />
 
     <TextView
         android:text="Title"
@@ -27,9 +31,8 @@
         android:id="@+id/etTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/tvTitle"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="23dp" />
+        android:layout_alignBottom="@+id/tvTitle"
+        android:layout_alignParentStart="true" />
 
 
     <TextView
@@ -55,33 +58,13 @@
         android:layout_below="@id/etStoryBody"/>
 
     <Button
-        android:id="@+id/btFetch"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Fetch Data"
-        android:layout_below="@id/btSave"/>
-
-    <TextView
-        android:id="@+id/tvStoriesLabel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Stories"
-        android:textStyle="bold"
-        android:layout_below="@id/btFetch"/>
-
-    <TextView
-        android:id="@+id/tvStories"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvStoriesLabel"/>
-
-    <Button
         android:id="@+id/bTakePhoto"
-        android:layout_width="wrap_content"
+        android:layout_width="75dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/tvStories"
-        android:text="Take Photo" />
+        android:layout_below="@+id/btSave"
+        android:text="Take Photo"
+        android:textSize="10sp" />
 
     <ImageView
         android:id="@+id/ivPreview"
@@ -93,11 +76,13 @@
 
     <Button
         android:id="@+id/btImportPhoto"
-        android:layout_width="wrap_content"
+        android:layout_width="75dp"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/bTakePhoto"
+        android:layout_above="@+id/ivPreview"
+        android:layout_below="@+id/btSave"
         android:layout_toEndOf="@+id/bTakePhoto"
-        android:text="Import Photo" />
+        android:text="Import Photo"
+        android:textSize="10sp" />
 
     <EditText
         android:id="@+id/tvDate"
@@ -105,17 +90,26 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="date"
-        android:layout_alignParentBottom="true"
+        android:layout_alignBottom="@+id/ibCalendar"
         android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/btImportPhoto" />
+        android:layout_toEndOf="@+id/ibCalendar" />
 
     <ImageButton
         android:id="@+id/ibCalendar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/ic_date_range_black_24dp"
+        android:layout_alignBottom="@+id/btImportPhoto"
+        android:layout_toEndOf="@+id/btImportPhoto"
+        android:layout_below="@+id/btSave" />
+
+    <EditText
+        android:id="@+id/editText5"
+        android:layout_width="1dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_toStartOf="@+id/tvDate"
-        android:layout_alignTop="@+id/tvDate" />
+        android:layout_alignParentStart="true"
+        android:ems="10"
+        android:inputType="textPersonName" />
 
 </RelativeLayout>
