--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -29,34 +29,41 @@
             android:layout_toEndOf="@id/ivProfileImage"
             android:paddingTop="12dp"
             android:text="Jane Doe"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
 
         <ImageView
             android:id="@+id/ivLocationIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tvName"
-            android:layout_toEndOf="@id/ivProfileImage"
-            android:src="@drawable/ic_location_on_black_24dp" />
+            android:layout_alignBottom="@+id/tvLocation"
+            android:layout_alignTop="@+id/tvLocation"
+            android:layout_toEndOf="@+id/ivProfileImage"
+            android:src="@drawable/ic_location_on_black_24dp"
+            android:tint="@android:color/white" />
 
         <TextView
             android:id="@+id/tvLocation"
             android:layout_width="75dp"
             android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/ratingBar"
+            android:layout_toEndOf="@+id/ivLocationIcon"
             android:text="Menlo Park, CA"
-            android:textSize="9sp"
-            android:layout_alignBottom="@+id/ivLocationIcon"
-            android:layout_toEndOf="@+id/ivLocationIcon" />
+            android:textColor="@android:color/white"
+            android:textSize="12sp"
+            android:textStyle="bold" />
 
 
         <RatingBar
             android:id="@+id/ratingBar"
-            style="@style/Widget.AppCompat.RatingBar.Small"
+            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/tvLocation"
-            android:layout_marginStart="64dp"
-            android:layout_toEndOf="@+id/tvName" />
+            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/tvName"
+            android:scaleX="0.8"
+            android:scaleY="0.8"
+            android:theme="@style/RatingBar" />
 
     </RelativeLayout>
 
