--- a/app/src/main/res/layout/activity_author.xml
+++ b/app/src/main/res/layout/activity_author.xml
@@ -25,14 +25,16 @@
         android:layout_height="50dp"
         android:id="@+id/tvTitle"
         android:layout_alignParentTop="true"
+        android:layout_marginTop="20dp"
         android:layout_alignParentStart="true" />
 
     <EditText
         android:id="@+id/etTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/tvTitle"
-        android:layout_alignParentStart="true" />
+        android:layout_alignTop="@+id/tvTitle"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="20dp" />
 
 
     <TextView
@@ -40,7 +42,9 @@
         android:id="@+id/tvBody"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/etTitle"/>
+        android:layout_below="@+id/tvTitle"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="20dp" />
 
     <EditText
         android:id="@+id/etStoryBody"
@@ -48,41 +52,42 @@
         android:layout_height="wrap_content"
         android:maxLines="20"
         android:scrollbars="vertical"
-        android:layout_below="@id/tvBody"/>
+        android:layout_below="@+id/tvBody"
+        android:layout_toEndOf="@+id/editText5" />
 
     <Button
         android:id="@+id/btSave"
         android:text="Create"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/etStoryBody"/>
+        android:layout_below="@+id/etStoryBody"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/bTakePhoto"
         android:layout_width="75dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/btSave"
         android:text="Take Photo"
-        android:textSize="10sp" />
+        android:textSize="10sp"
+        android:layout_below="@+id/btSave"
+        android:layout_alignParentStart="true" />
 
     <ImageView
         android:id="@+id/ivPreview"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/bTakePhoto"
-        app:srcCompat="@color/colorAccent" />
+        app:srcCompat="@color/colorAccent"
+        android:layout_below="@+id/ibCalendar"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/btImportPhoto"
         android:layout_width="75dp"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/ivPreview"
-        android:layout_below="@+id/btSave"
-        android:layout_toEndOf="@+id/bTakePhoto"
         android:text="Import Photo"
-        android:textSize="10sp" />
+        android:textSize="10sp"
+        android:layout_below="@+id/btSave"
+        android:layout_toEndOf="@+id/bTakePhoto" />
 
     <EditText
         android:id="@+id/tvDate"
@@ -99,9 +104,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/ic_date_range_black_24dp"
-        android:layout_alignBottom="@+id/btImportPhoto"
+        android:layout_below="@+id/btSave"
         android:layout_toEndOf="@+id/btImportPhoto"
-        android:layout_below="@+id/btSave" />
+        android:layout_alignBottom="@+id/btImportPhoto" />
 
     <EditText
         android:id="@+id/editText5"
