--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,37 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="org.dreamitcodeit.storyteller.ViewStoryActivity">
 
-    <TextView
-        android:id="@+id/tvTitle"
-        android:layout_width="wrap_content"
+    <!--<TextView-->
+    <!--android:id="@+id/tvTitle"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="TextView"-->
+    <!--android:layout_alignParentTop="true"-->
+    <!--android:layout_alignParentStart="true"-->
+    <!--android:layout_marginTop="17dp" />-->
+
+    <!--<TextView-->
+    <!--android:id="@+id/tvStoryBody"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginTop="28dp"-->
+    <!--android:text="TextView"-->
+    <!--android:maxLines="25"-->
+    <!--android:scrollbars="vertical"-->
+    <!--android:layout_below="@+id/tvTitle"-->
+    <!--android:layout_alignParentStart="true" />-->
+
+    <!--<ImageView-->
+    <!--android:id="@+id/ivImage"-->
+    <!--android:layout_width="100dp"-->
+    <!--android:layout_height="100dp"-->
+    <!--android:layout_alignParentStart="true"-->
+    <!--android:layout_below="@+id/tvStoryBody"-->
+    <!--app:srcCompat="@color/colorAccent" />-->
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/sliding_tabs"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="17dp" />
+        app:tabMode="fixed" />
 
-    <TextView
-        android:id="@+id/tvStoryBody"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="TextView"
-        android:maxLines="25"
-        android:scrollbars="vertical"
-        android:layout_below="@+id/tvTitle"
-        android:layout_alignParentStart="true" />
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="1"
+        android:layout_below="@+id/sliding_tabs"
+        android:background="@android:color/white" />
 
-    <ImageView
-        android:id="@+id/ivImage"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/tvStoryBody"
-        app:srcCompat="@color/colorAccent" />
-
-</RelativeLayout>
+</LinearLayout>
