3/4 tabs populate with correct stories

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -36,7 +36,7 @@
     <!--app:srcCompat="@color/colorAccent" />-->
 
     <android.support.design.widget.TabLayout
-        android:id="@+id/sliding_tabs"
+        android:id="@+id/sliding_tabs_all"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabMode="fixed" />
@@ -46,7 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="0px"
         android:layout_weight="1"
-        android:layout_below="@+id/sliding_tabs"
+        android:layout_below="@+id/sliding_tabs_all"
         android:background="@android:color/white" />
 
 </LinearLayout>
