--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -5,14 +5,14 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 android:layout_width="match_parent"
 android:layout_height="match_parent">
 
-<fragment
-    android:id="@+id/map"
-    class="com.google.android.gms.maps.SupportMapFragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_alignParentTop="true" />
+    <fragment
+        android:id="@+id/map"
+        class="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true" />
 
-<android.support.design.widget.FloatingActionButton
+    <android.support.design.widget.FloatingActionButton
     android:id="@+id/fabComposeCurrentLocation"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -23,5 +23,16 @@ android:layout_height="match_parent">
     app:layout_anchorGravity="bottom|right|end"
     app:backgroundTint="@color/colorPrimary"
     android:onClick="onFabComposeCurrentLocationClick"/>
+
+    <Switch
+        android:id="@+id/sMapList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|right"
+        android:text="Map or List?"
+        app:layout_anchor="@+id/map"
+        app:layout_anchorGravity="bottom|left" />
+
+
 
 </android.support.design.widget.CoordinatorLayout>
