--- a/app/src/main/res/layout/activity_view_story.xml
+++ b/app/src/main/res/layout/activity_view_story.xml
@@ -34,5 +34,13 @@
         android:layout_below="@+id/tvStoryBody"
         app:srcCompat="@color/colorAccent" />
 
+    <Button
+        android:id="@+id/btnFavorite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/tvTitle"
+        android:text="Favorite" />
+
 
 </RelativeLayout>
