--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -5,15 +5,15 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 android:layout_width="match_parent"
 android:layout_height="match_parent">
 
-    <com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:sothree="http://schemas.android.com/apk/res-auto"
+    <com.sothree.slidinguppanel.SlidingUpPanelLayout
         android:id="@+id/sliding_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="bottom"
-        sothree:umanoDragView="@+id/dragView"
-        sothree:umanoOverlay="true"
-        sothree:umanoPanelHeight="68dp"
-        sothree:umanoShadowHeight="4dp">
+        app:umanoDragView="@+id/dragView"
+        app:umanoOverlay="true"
+        app:umanoPanelHeight="68dp"
+        app:umanoShadowHeight="4dp">
 
 
     <android.support.design.widget.CoordinatorLayout
@@ -34,20 +34,19 @@ android:layout_height="match_parent">
             android:id="@+id/map"
             class="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="520dp"
+            android:layout_height="540dp"
             android:layout_alignParentTop="true" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fabComposeCurrentLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
             android:layout_margin="16dp"
+            android:onClick="onFabComposeCurrentLocationClick"
             android:src="@drawable/ic_edit_location_black_24dp"
-            app:layout_anchor="@id/map"
-            app:layout_anchorGravity="bottom|right|end"
             app:backgroundTint="@color/colorPrimary"
-            android:onClick="onFabComposeCurrentLocationClick"/>
+            app:layout_anchorGravity="bottom|right|end"
+            app:layout_anchor="@+id/map" />
     </android.support.design.widget.CoordinatorLayout>
 
             <!-- SLIDING LAYOUT -->
