--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -11,7 +11,7 @@ android:layout_height="match_parent">
         android:layout_height="match_parent"
         android:gravity="bottom"
         app:umanoDragView="@+id/dragView"
-        app:umanoOverlay="true"
+        app:umanoOverlay="false"
         app:umanoPanelHeight="68dp"
         app:umanoShadowHeight="4dp">
 
@@ -49,29 +49,29 @@ android:layout_height="match_parent">
     </android.support.design.widget.CoordinatorLayout>
 
             <!-- SLIDING LAYOUT -->
-            <LinearLayout
-                android:id="@+id/dragView"
+        <LinearLayout
+            android:id="@+id/dragView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#ffffff"
+            android:clickable="true"
+            android:focusable="false"
+            android:orientation="vertical">
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/sliding_tabs_all"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#ffffff"
-                android:clickable="true"
-                android:focusable="false"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                app:tabMode="fixed" />
 
-                <android.support.design.widget.TabLayout
-                    android:id="@+id/sliding_tabs_all"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:tabMode="fixed" />
-
-                <android.support.v4.view.ViewPager
-                    android:id="@+id/viewpager"
-                    android:layout_width="match_parent"
-                    android:layout_height="0px"
-                    android:layout_weight="1"
-                    android:layout_below="@+id/sliding_tabs_all"
-                    android:background="@android:color/white" />
-            </LinearLayout>
+            <android.support.v4.view.ViewPager
+                android:id="@+id/viewpager"
+                android:layout_width="match_parent"
+                android:layout_height="0px"
+                android:layout_below="@+id/sliding_tabs_all"
+                android:layout_weight="1"
+                android:background="@android:color/white" />
+        </LinearLayout>
 
         </com.sothree.slidinguppanel.SlidingUpPanelLayout>
 
