--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#453823</color>
-    <color name="colorPrimaryDark">#453823</color>
-    <color name="colorAccent">#2cf6b3</color>
+    <color name="colorPrimary">#00761d</color>
+    <color name="colorPrimaryDark">#ffff50</color>
+    <color name="colorAccent">#00ffbf</color>
     <color name="colorWhite">#ffffff</color>
 </resources>
