--- a/app/src/main/res/layout/activity_view_story.xml
+++ b/app/src/main/res/layout/activity_view_story.xml
@@ -20,21 +20,23 @@
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textSize="18sp"
-        android:textStyle="bold"
         android:layout_alignBottom="@+id/ivImage"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:text="TextView"
+        android:textColor="@color/colorWhite"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvStoryBody"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/ivImage"
         android:maxLines="40"
         android:scrollbars="vertical"
-        android:layout_below="@+id/ivImage"
-        android:layout_alignParentStart="true" />
+        android:text="TextView"
+        android:textColor="@android:color/black" />
 
 
 
