--- a/app/src/main/res/layout/item_story.xml
+++ b/app/src/main/res/layout/item_story.xml
@@ -13,7 +13,7 @@
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
         android:layout_marginTop="12dp"
-        android:adjustViewBounds="true"
+        android:adjustViewBounds="false"
         android:background="@drawable/round_outline"
         android:scaleType="fitXY" />
 
