--- a/app/src/main/res/layout/activity_author.xml
+++ b/app/src/main/res/layout/activity_author.xml
@@ -21,6 +21,7 @@
         android:id="@+id/etTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textCapSentences"
         android:layout_alignTop="@+id/tvTitle"
         android:layout_alignParentStart="true"
         android:layout_marginTop="20dp" />
@@ -40,6 +41,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="20"
+        android:inputType="textCapSentences"
         android:scrollbars="vertical"
         android:layout_below="@+id/tvBody"
         android:layout_toEndOf="@+id/editText5" />
