--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00761d</color>
-    <color name="colorPrimaryDark">#ffff50</color>
-    <color name="colorAccent">#00ffbf</color>
+    <color name="colorPrimary">#BF009F</color>
+    <color name="colorPrimaryDark">#BF009F</color>
+    <color name="colorAccent">#FFF41A</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorHeart">#c72542</color>
     <color name="colorBlack">#000000</color>
+    <color name ="color1">#F9401A</color>
+    <color name ="color2">#E72C41</color>
+    <color name ="color3">#D61969</color>
+    <color name ="color4">#CA0C84</color>
+    <color name="color5">#BF009F</color>
+    <color name="verifiedPin">#9FBF00</color>
+
 </resources>
