--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#BF009F</color>
     <color name="colorPrimaryDark">#BF009F</color>
-    <color name="colorAccent">#FFF41A</color>
+    <color name="colorAccent">#BFDEBD</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorHeart">#c72542</color>
     <color name="colorBlack">#000000</color>
