--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -37,7 +37,7 @@ android:layout_height="match_parent">
                 android:layout_margin="16dp"
                 android:onClick="onFabComposeCurrentLocationClick"
                 android:src="@drawable/ic_edit_location_black_24dp"
-                app:backgroundTint="@color/colorPrimary"
+                app:backgroundTint="@color/colorYellow"
                 app:layout_anchor="@+id/map" />
 
             <fragment
