--- a/app/src/main/res/layout/activity_view_story.xml
+++ b/app/src/main/res/layout/activity_view_story.xml
@@ -39,6 +39,7 @@
         android:layout_below="@+id/ivImage"
         android:maxLines="40"
         android:scrollbars="vertical"
+        android:fastScrollEnabled="true"
         android:text="TextView"
         android:textColor="@android:color/black" />
     <!--</ScrollView>-->
